--- a/index.html
+++ b/index.html
@@ -543,6 +543,6 @@
             </div>
         </div>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="js/bundle.js"></script>
 </body>
 </html>
